2007-05-10 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSAnimation.m: removed some C99-isms and simplified by
	removing attempt to avoid locking when in single threaded mode.
	* Headers/AppKit/NSAnimation.h: added an ivar and FIXME comments.

2007-05-08 Riccardo Mottola <rmottola@users.sf.net>

	* Source/NSAnimation.m: removed some C99-isms

2007-04-29 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSButtonCell.m
	* Source/NSMenuItemCell.m: Whitespace cleanup.

2007-04-27 Fred Kiefer <FredKiefer@gmx.de>

	* Headers/AppKit/NSDragging.h: Added a few MacOSX 10.2 methods
	* Source/GSSlideView.m: (-_handleDrag:slidePoint:): Call new
	MacOSX method on destionation when available. 
	Patch by Yen-Ju Chen <yjchenx@gmail.com>

2007-04-27 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSTableView.m (-editColumn::row:withEvent:select:): Set
	the background colour of the text object and make it draw its background.

2007-04-24 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSTableView.m (-noteNumberOfRowsChanged): Handle the case
	correctly where an empty selection is not allowed and now there
	are rows available. 

2007-04-13  Adam Fedor  <fedor@gnu.org>

	* Version: Bump version

2007-04-13  Adam Fedor  <fedor@gnu.org>

	* Version 0.12.0
	* Source/NSAnimation.m: Remove unused and incorrect include.

2007-04-12 Xavier Glattard <xavier.glattard@online.fr>

	* Headers/AppKit/NSAnimation.h
	* Source/NSAnimation.m
	* Headers/Additions/GNUstepGUI/GSAnimator.h
	* Source/GSAnimator.m
	- attempt to follow GNU coding standards
	- implementation of NSAnimationBlockingMode and 
	  NSAnimationNonBlockingThreaded modes
	- fix some bugs and incompatibilities with Cocoa
	- Add some more documentation

2007-04-11 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSView.m: When transforming a size ensure that the
	resulting height is positive.  Is this correct behavior?
	It should reproduce the old (incorrect ... ie differing from MacOS-X)
	behavior of NSAffineTransform.
