@@ -1,3 +1,7 @@
+2007-05-10 Riccardo Mottola <rmottola@users.sf.net>
+
+	* Source/NSAnimation.m: removed some C99-isms
+
 2007-05-10 Richard Frith-Macdonald <rfm@gnu.org>
 
 	* Source/NSAnimation.m: removed some C99-isms and simplified by
